--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body bgcolor="#00FFFF">
     <a href="http://www.animates.co.nz/">this is where you can find fluffy kittens for sale</a>
     <img src="http://i2.ytimg.com/vi/uJBWtltdvHE/mqdefault.jpg" />
+    <img src="./images/yoda.jpg" />
     <p>i really<b> really</b> love fluffy kittens</p>
 </body>
 
