--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <html>
-<header></header>
+<head>
+    <style>
+        body
+        {
+            bgcolor: #00FFFF
+        }
+        img 
+        {
+            width: 400px; 
+        }
+        .container 
+            {
+                width: 400px; 
+                margin: 0 auto;
+            }
+    </style>
+</head>
 
 <body bgcolor="#00FFFF">
-    <a href="http://www.animates.co.nz/">this is where you can find fluffy kittens for sale</a>
-    <img src="http://i2.ytimg.com/vi/uJBWtltdvHE/mqdefault.jpg" />
-    <img src="./images/yoda.jpg" />
-    <p>i really<b> really</b> love fluffy kittens</p>
+    <div class="container">
+        <div>
+            <a href="http://www.animates.co.nz/">this is where you can find fluffy kittens for sale</a>
+        </div>
+        <div>
+            <img src="http://i2.ytimg.com/vi/uJBWtltdvHE/mqdefault.jpg" />
+        </div>
+        <div>
+            <img src="./images/yoda.jpg" />
+        </div>
+        <p>i really<b> really</b> love fluffy kittens</p>
+    </div>
 </body>
 
 </html>
